--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@
 :root{
 
     --brand-color-light: #60A5FA;
-    --brand-color-dark:#1D4ED8;
+    --brand-color-dark:#1d4ed8;
     --bg-color: #0F172A;
     --stroke-color:#1E293B;
     --text-color-primary: #F1F5F9;
@@ -41,4 +41,18 @@ a:hover{
 
 h1, h2, h3{
     color: inherit;
+}
+
+.container{
+    max-width: 1280px;
+    padding-inline: 32px;
+    margin-inline: auto;
+}
+
+.grid{
+    display: grid;
+}
+
+.grid-flow-col{
+    grid-auto-flow: column;
 }
