--- a/styles/sections.css
+++ b/styles/sections.css
@@ -2,7 +2,25 @@
     img{
         height: 100%;
         object-fit: cover;
+     
+    }
+
+    .card{
         border-radius: 4px;
+        overflow: hidden;
+        position: relative;
+       
+      
+
+        &::before{
+            content: " ";
+            position: absolute;
+            inset: 0;
+            background-color: white;
+            top: 50%;
+            background: linear-gradient(180deg, rgba(2, 6, 23, 0.00) 0%, #020617 100%);
+
+        }
     }
   
 }
