--- a/styles/sections.css
+++ b/styles/sections.css
@@ -9,18 +9,28 @@
         border-radius: 4px;
         overflow: hidden;
         position: relative;
-       
-      
+            
 
         &::before{
             content: " ";
             position: absolute;
             inset: 0;
-            background-color: white;
             top: 50%;
             background: linear-gradient(180deg, rgba(2, 6, 23, 0.00) 0%, #020617 100%);
 
         }
+    }
+
+    figcaption{
+        position: absolute;
+        bottom: 0;
+
+        padding: 24px;
+
+        h2{
+            margin-top: 8px;
+        }
+
     }
   
 }
